<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menus Principais">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/dashboard_do_usu_rio" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/meu_perfil_ru" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow" />
        </menu>
    </item>
    <item android:title="Rotinas Secundárias">
        <menu>

            <item android:id="@+id/Config"
                android:icon="@drawable/ic_config"
                android:title="Configurações do App"/>
            <item android:id="@+id/sair"
                android:icon="@drawable/ic_exit"
                android:title="Sair"/>

        </menu>
    </item>
</menu>