<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".rotinas.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layout"
        android:padding="4dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_user"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ru_ifma_ncadastro"
            android:textAlignment="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/layout2"/>
    </LinearLayout>
    <!-- INPUTS PARA A ROTINA CADASTRO -->

    <LinearLayout
        android:id="@+id/cardLayoutCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="8dp"
        android:background="@drawable/background_layout_login_withe"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro"
            android:textAlignment="center"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Style.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/nome"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="18dp"
            style="@style/Style.TextInputLayout"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sobre_nome">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextSobreNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="18dp"
            style="@style/Style.TextInputLayout"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_para_acesso">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextEmailCad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="18dp"
            style="@style/Style.TextInputLayoutSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            android:hint="@string/senha_para_acesso">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextSenhaCad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="18dp"
            style="@style/Style.AutoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao">
            <AutoCompleteTextView
                android:id="@+id/roles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="18dp"
            style="@style/Style.TextInputLayout"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/anivers_rio">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextAniversario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/layout"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                style="@style/Style.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acessar"
                android:onClick="insertInto"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</ScrollView>