<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".rotinas.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layout"
        android:padding="4dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_user"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/titleColor"
            android:text="@string/ru_ifma_nmobile"
            android:textSize="18sp"
            android:fontFamily="@font/robotocondensed_bold"
            android:textAlignment="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/layout"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/cardLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/background_layout_login_withe"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/robotocondensed_bold"
                android:text="@string/login"
                android:textAlignment="center"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Style.TextInputLayout"
                android:id="@+id/layoutLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/email_de_acesso"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="18dp"
                android:id="@+id/layoutLoginPassword"
                style="@style/Style.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:hint="@string/senha_de_acesso">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_gravity="start">
                <TextView
                    android:id="@+id/rotinaCadastro"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/nao_possui_cadastro_cadastre_se"
                    android:fontFamily="@font/robotocondensed_bold"
                    android:clickable="true"
                    android:focusable="true"/>
                <TextView
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/esqueci_a_minha_senha"
                    android:fontFamily="@font/robotocondensed_bold"/>
            </LinearLayout>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/layout"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:gravity="center">
                <com.google.android.material.button.MaterialButton
                    style="@style/Style.Button"
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acessar"
                    android:onClick="logarTest"/>
            </LinearLayout>

        </LinearLayout>
</LinearLayout>
</ScrollView>