<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ui.perfilFragment.PerfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_layout_login_withe">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/robotocondensed_bold"
            android:textSize="20sp"
            android:text="Nome Completo"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Style.TextInputLayout"
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:text="@string/nenhum_dado_foi_encontrado"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.9dp"
            android:background="@color/layout"/>
        <TextView
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/robotocondensed_bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email de Acesso"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Style.TextInputLayout"
            android:id="@+id/editEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@string/nenhum_dado_foi_encontrado"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.9dp"
            android:background="@color/layout"/>
        <TextView
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/robotocondensed_bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Telefone de Contato"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Style.TextInputLayout"
            android:id="@+id/edit_layoutFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/FoneNull"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.9dp"
            android:background="@color/layout"/>
        <TextView
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="@font/robotocondensed_bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data de Aniversário"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Style.TextInputLayout"
            android:id="@+id/layoutLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/erroNver"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.9dp"
            android:background="@color/layout"/>
    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:icon="@drawable/ic_edit"
            />

    </LinearLayout>

</LinearLayout>